server/klowhub-gateway/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gcr.io/wired-climate-442121-i1/gateway:latest
          ports:
            - containerPort: 3000 # Puerto configurado en el gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-cluster
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traffic
  namespace: default
spec:
  podSelector: {}  # Aplica a todos los pods
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0  # Permitir tráfico desde cualquier IP (interno y externo)
  egress:
  - to:
    - podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0  # Permitir tráfico hacia cualquier IP (interno y externo)
